feat: refactor api with latest post approach
